--- a/2_contol_task/control_task/.vscode/settings.json
+++ b/2_contol_task/control_task/.vscode/settings.json
@@ -15,5 +15,10 @@
     "idf.pythonBinPathWin": "D:/Espressif/python_env/idf5.3_py3.11_env/Scripts/python.exe",
     "idf.toolsPathWin": "D:\\Espressif",
     "idf.flashType": "UART",
-    "idf.gitPathWin": "D:/Espressif/tools/idf-git/2.44.0/cmd/git.exe"
+    "idf.gitPathWin": "D:/Espressif/tools/idf-git/2.44.0/cmd/git.exe",
+    "files.associations": {
+        "esp_rom_sys.h": "c",
+        "esp_system.h": "c",
+        "esp_idf_version.h": "c"
+    }
 }
