--- a/2_contol_task/control_task/.vscode/settings.json
+++ b/2_contol_task/control_task/.vscode/settings.json
@@ -19,6 +19,7 @@
     "files.associations": {
         "esp_rom_sys.h": "c",
         "esp_system.h": "c",
-        "esp_idf_version.h": "c"
+        "esp_idf_version.h": "c",
+        "cstring": "c"
     }
 }
