--- a/esp32_ec11_decode/.vscode/settings.json
+++ b/esp32_ec11_decode/.vscode/settings.json
@@ -10,5 +10,10 @@
   "idf.customExtraVars": {
     "IDF_TARGET": "esp32s3"
   },
-  "idf.flashType": "UART"
+  "idf.flashType": "UART",
+  "files.associations": {
+    "esp_memory_utils.h": "c",
+    "memory.h": "c",
+    "gpio_filter.h": "c"
+  }
 }
